--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "lint": "expo lint"
+    "lint": "eslint .",
+    "test": "jest"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
@@ -40,10 +41,19 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@eslint/js": "^9.27.0",
+    "@types/jest": "^29.5.14",
     "@types/react": "~19.0.10",
+    "eslint": "^9.27.0",
+    "eslint-config-expo": "~9.2.0",
+    "eslint-plugin-prettier": "^5.4.0",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.2.0",
+    "jest": "^29.7.0",
+    "jest-expo": "^53.0.5",
+    "prettier": "^3.5.3",
     "typescript": "~5.8.3",
-    "eslint": "^9.25.0",
-    "eslint-config-expo": "~9.2.0"
+    "typescript-eslint": "^8.33.0"
   },
   "private": true
 }
