--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@react-navigation/native": "^7.1.6",
     "@supabase/supabase-js": "^2.49.8",
     "@tanstack/react-query": "^5.79.0",
-    "expo": "~53.0.10",
+    "expo": "53.0.10",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.6",
     "expo-font": "~13.3.1",
