--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,8 @@
     "jsx": "react-native",
     "allowJs": true,
     "esModuleInterop": true,
-    "module": "esnext",
-    "moduleResolution": "node",
+    "module": "NodeNext",
+    "moduleResolution": "nodenext",
     "resolveJsonModule": true,
     "strict": true,
     "target": "esnext",
